test/types/seq/bradc/emptySeq3.good
emptySeq3.chpl:1: error: Type mismatch in assignment from nil to seq(int)
